--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ python/cogs/*.history
 python/questions.txt
 last_graph.png
 token_graph.png
+tokens_graph.png
 donation.json
 id_mapping.json
 api_secrets_file
